--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg header-div">
     <div class="container-fluid" style="display: flex;">
-      <a class="navbar-brand" style="color: red;" href="#">Equity Trade Blotter</a>
+      <a class="navbar-brand brand" style="color: #77ED91;" href="#">Equity Trade Blotter</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" style="justify-content: space-between;" id="navbarSupportedContent">
+      <div  id="navbarSupportedContent">
        
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
