--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,12 +1,11 @@
-
 <div class="sidebar-nav">
-    <div class="logo-container">
-<img src="assets/logo.jpg" width="25">
-    </div>
-    <div class="button-container" style="text-align: center;">
-        <button class="btn btn-primary nav-button-item"> Import</button>
-    </div>
-    <div class="button-container" style="text-align: center;">
-        <button class="btn btn-primary nav-button-item"> Import</button>
-    </div>
+  <div class="logo-container">
+    <img src="assets/logo.jpg" width="25" />
+  </div>
+  <div class="button-container" style="text-align: center">
+    <button class="btn btn-primary nav-button-item">Import</button>
+  </div>
+  <div class="button-container" style="text-align: center">
+    <button class="btn btn-primary nav-button-item">Import</button>
+  </div>
 </div>
