--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-<app-header>
-
-</app-header>
-<app-sidenav>
-
-</app-sidenav>
-<div class="container">
+<app-header> </app-header>
+<app-sidenav> </app-sidenav>
+<div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
