--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -6,6 +6,6 @@
     <button class="btn btn-primary nav-button-item">Import</button>
   </div>
   <div class="button-container" style="text-align: center">
-    <button class="btn btn-primary nav-button-item">Import</button>
+    <button class="btn btn-primary nav-button-item" (click)="gotoTable()" >Import</button>
   </div>
 </div>
