--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,11 +1,25 @@
 <div class="sidebar-nav">
   <div class="logo-container">
-    <img src="assets/logo.jpg" width="25" />
+    <img src="assets/logo.jpg" width="30" alt="img" />
   </div>
-  <div class="button-container" style="text-align: center">
+
+  <ul>
+    <li class="active">
+      <a class="side-nav-link"><span class="side-nav-icon"></span> Import trade</a>
+    </li>
+    <li>
+      <a class="side-nav-link"><span class="side-nav-icon"></span> Trade Blotter</a>
+    </li>
+    <li>
+      <a class="side-nav-link"><span class="side-nav-icon"></span> Customer Master</a>
+    </li>
+  </ul>
+
+  <!-- <div class="button-container" style="text-align: center">
     <button class="btn btn-primary nav-button-item">Import</button>
   </div>
   <div class="button-container" style="text-align: center">
     <button class="btn btn-primary nav-button-item" (click)="gotoTable()" >Import</button>
-  </div>
+  </div> -->
+
 </div>
