--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header> </app-header>
 <app-sidenav> </app-sidenav>
-<div class="container-fluid">
+<div class="router-placeholder">
   <router-outlet></router-outlet>
 </div>
